@@ -29703,18 +29703,18 @@ upd:"String {0} not found"
 upd:"String {0} not found"
 
 MCharacterIsNotSupportedByTheCodepage
-"Символ "{0}" не поддерживается выбранной кодовой страницей"
-"The "{0}" character is not supported by the selected code page"
-"Vybraná znaková stránka znak "{0}" nepodporuje"
-"Das Zeichen "{0}" wird von der ausgewählten Codepage nicht unterstützt"
-"Az "{0}" karaktert a kiválasztott kódlap nem támogatja"
-"Znak "{0}" nie jest obsługiwany przez wybraną stronę kodową"
-"El carácter "{0}" no es compatible con la página de códigos seleccionada"
-"Vybraná kódová stránka znak "{0}" nepodporuje"
-"Il carattere "{0}" non è supportato dalla tabella codici selezionata"
-"Вибрана кодова сторінка не підтримує символ "{0}""
-"Выбраная кодавая старонка не падтрымлівае сімвал "{0}""
-upd:"The "{0}" character is not supported by the selected code page"
+"Символ "{0}" ({1}) не поддерживается выбранной кодовой страницей"
+"The character "{0}" ({1}) is not supported by the selected code page"
+"Znak "{0}" ({1}) není podporován vybranou kódovou stránkou"
+"Das Zeichen "{0}" ({1}) wird von der ausgewählten Codepage nicht unterstützt"
+"Az araktert "{0}" ({1}) a kiválasztott kódlap nem támogatja"
+"Znak "{0}" ({1}) nie jest obsługiwany przez wybraną stronę kodową"
+"El carácter "{0}" ({1}) no es compatible con la página de códigos seleccionada"
+"Znak "{0}" ({1}) nie je podporovaný vybratou kódovou stránkou"
+"Il carattere "{0}" ({1}) non è supportato dalla tabella codici selezionata"
+"Символ "{0}" ({1}) не підтримується вибраною кодовою сторінкою"
+"Сімвал "{0}" ({1}) не падтрымліваецца выбранай кодавай старонкай"
+upd:"The character "{0}" ({1}) is not supported by the selected code page"
 
 MKeyLaunchMediaSelect
 l:// keys
